# alzheimer-rag

./: .env_template  README.md  alzheimer_citations.xlsx  helpers.py  pyproject.toml  rag.ipynb  streamlit_app.py  task.md
articles_md/: garciaosta2012.md  gleason2020.md  gong2018.md  grill2010.md  penke2023.md  serradas2024.md  sunho2014.md  teeba2021.md  valenza2021.md  weiming2023.md
questions/: test_data_general.json  test_data_specific.json
