[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "DemidOsipov",email = "demid.osipov.space@gmail.com"}
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-cohere (>=0.5.0,<0.6.0)",
    "langchain-neo4j (>=0.8.0,<0.9.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "pinecone (>=8.0.0,<9.0.0)",
    "pinecone-text (>=0.11.0,<0.12.0)",
    "marker-pdf (>=1.10.2,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "cohere (>=5.20.2,<6.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "exceptiongroup (>=1.3.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "docling (>=2.71.0,<3.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "gigachat (>=0.2.0,<0.3.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "streamlit (>=1.53.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
